[tool.poetry]
name = "redis-stream-consumer-utils"
version = "0.1.0"
description = "This package provides utils to use with redis stream data type"
authors = ["Sumanth <jschary555@gmail.com>"]
readme = "README.md"
package-mode = true
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
